[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://DynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://DynamicFontSmall.tres" type="DynamicFont" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = ExtResource( 2 )
text = "TETRIS"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="StartLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 101.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 3 )
text = "press enter to start"
align = 1
autowrap = true
uppercase = true

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 159.0
margin_right = 240.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "YOU lose"
align = 1
autowrap = true
uppercase = true

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 20.0
margin_right = 240.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "10"
align = 1
autowrap = true
uppercase = true

